# amanises

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/design/: grammar.md  types.md
docs/internal/: compilerPipeline.md
src/: compilerPipeline.cpp  compilerPipeline.hpp  compilerSetup.cpp  compilerSetup.hpp  driver.cpp  driver.hpp  error.cpp  error.hpp  lexer.cpp  lexer.h  logger.cpp  logger.hpp  main.cpp  tokenTypes.h
src/compiler/: compile.cpp
src/driver/: main.cpp  process.cpp  process.hpp
src/error/: error.cpp  error.hpp
src/frontend/: lexer.cpp  lexer.hpp  lexicalAnalyzer.cpp  lexicalAnalyzer.hpp
src/lexer/: lError.hpp  lHelper.cpp  lHelper.hpp  lexHelper.cpp  lexHelper.hpp  lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast.cpp  ast.hpp  parser.cpp  parser.hpp
src/utils/: helper.cpp  helper.hpp  logger.cpp  logger.hpp  token.hpp  tokenTypes.hpp  tokens.hpp  utils.cpp  utils.hpp
tests/: test.ama
tests/integration/: testMultipleFile1.ama  testMultipleFile2.ama
tests/unit/: testFib.ama  testHelloWorld.ama  testOperators.ama  testPunctuation.ama  testTok.ama  testTokenization.ama  testTokenizer.ama
